public class Transaction
{
    private double amount;
    //Timestamp timestamp;

    public Transaction()
    {

    }

    public double getAmount()
    {
        return 100;
    }
}
